# mcp-redteam

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml  smithery.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: audit.yml  publish.yml  test.yml
assets/: demo-animation.sh  demo.tape
assets/demo-server/: server.py
docs/: active-exploitation-playbook.md  attack-playbook.md  awesome-list-submissions.md  best-practices.md  morning-brief.md  reference-server.md  safe-testing-research.md  safety-audit.md  troubleshooting.md  v2-architecture-plan.md  v2-architecture-proposal.md  v2-critics-synthesis.md  v2-execution-plan.md  v2-final-plan.md
docs/launch/: blog-post.md  directory-submissions.md  newsletter-pitches.md  show-hn-post.md  social-media.md
docs/research/: scan-106-servers.md
examples/: sample-report.html
mcp_redteam/: __init__.py  cli.py  constants.py  models.py
mcp_redteam/engine/: audit_history.py  config_scanner.py  embedding_detector.py  remote_scanner.py  semgrep_runner.py
mcp_redteam/formatters/: __init__.py  html_fmt.py  json_fmt.py  sarif.py  terminal.py
mcp_redteam/llm/: analyzer.py
rules/javascript/: mcp-js-command-injection.yaml  mcp-js-credential-in-response.yaml  mcp-js-dangerous-params.yaml  mcp-js-eval.yaml  mcp-js-missing-error-handling.yaml  mcp-js-no-timeout-fetch.yaml  mcp-js-no-timeout-spawn.yaml  mcp-js-path-traversal.yaml  mcp-js-secrets.yaml  mcp-js-ssrf.yaml  mcp-js-stdout.yaml
rules/python/: mcp-blocking-sync-call.yaml  mcp-credential-in-code.yaml  mcp-credential-in-response.yaml  mcp-env-secret-no-rotation.yaml  mcp-eval-injection.yaml  mcp-missing-error-handling.yaml  mcp-missing-signal-handler.yaml  mcp-no-timeout-http.yaml  mcp-no-timeout-subprocess.yaml  mcp-oauth-overprivilege.yaml  mcp-path-traversal.yaml  mcp-shell-injection.yaml  mcp-ssrf.yaml  mcp-stdout-pollution.yaml
skills/mcp-redteam/: SKILL.md
tests/: test_audit_history.py  test_cli.py  test_config_scanner.py  test_edge_cases.py  test_embedding_detector.py  test_formatters.py  test_fuzzing.py  test_llm_analyzer.py  test_models.py  test_remote_scanner.py  test_self_security.py  test_semgrep.py  test_stress.py
tests/fixtures/benign/: calculator.py  config_paths.py  echo_server.py  file_reader_safe.py  safe_server.js  weather_api.py
tests/fixtures/vulnerable/: command_injection.js  credential_in_response.js  credential_in_response.py  dangerous_params.js  eval_injection.js  eval_injection.py  missing_error_handling.js  missing_error_handling.py  no_timeout_fetch.js  no_timeout_spawn.js  path_traversal.js  path_traversal.py  secrets_in_code.js  secrets_in_code.py  shell_injection.py  ssrf.js  ssrf.py  stdout_pollution.js  stdout_pollution.py
