[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redteam-mcp"
version = "0.3.0"
description = "MCP server security auditor — deterministic engine + AI-native behavioral analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "m0rvayne", email = "m0rvayne@proton.me" }
]
keywords = ["mcp", "security", "audit", "pentest", "red-team"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40", "instructor>=1.0"]
remote = ["requests>=2.31"]
dev = ["pytest>=8.0", "hypothesis>=6.0"]

[project.scripts]
mcp-redteam = "mcp_redteam.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["mcp_redteam"]

[tool.hatch.build.targets.sdist]
include = ["mcp_redteam/", "rules/"]

[tool.hatch.build.targets.wheel.shared-data]
"rules" = "mcp_redteam/rules"

[project.urls]
Homepage = "https://github.com/m0rvayne/mcp-redteam"
Repository = "https://github.com/m0rvayne/mcp-redteam"
